# TCP-Client-Server-Application

./: .gitignore  CMakeLists.txt  README.md
desktop/client/: main.cpp
desktop/networking/include/networking/: tcp_connection.h  tcp_server.h
desktop/networking/include/networking/client/: tcp_client.h
desktop/networking/include/networking/server/: tcp_connection.h  tcp_server.h
desktop/networking/src/: tcp_connection.cpp  tcp_server.cpp
desktop/networking/src/client/: tcp_client.cpp
desktop/networking/src/server/: tcp_connection.cpp  tcp_server.cpp
desktop/server/: main.cpp
